colors-webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lightpink
  name: lightpink
  namespace: colors-webapp
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: lightpink
  type: ClusterIP
